--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <p id="intro">你好，开放世界！</p>
     </div>
     <div>
-      <img alt="fellatio" src="img/fellatio.jpg" id="fellatio" height="400" />
+      <!-- <img alt="fellatio" src="img/fellatio.jpg" id="fellatio" height="400" /> -->
     </div>
     <div>
       <input type="button" id="introCtrl" value="fuck her!" />
     </div>
     <div>
-      <audio src="audio/123.mp3" controls>good music!</audio>
+      <!-- <audio src="audio/123.mp3" controls>good music!</audio> -->
     </div>
     <div>
-      <video src="video/123.mp4" controls width="500">fuck her off!</video>
+      <!-- <video src="video/123.mp4" controls width="500">fuck her off!</video> -->
     </div>
     <div>
       <form action="#" method="post">
